# actix-web

./: .env.example  .gitignore  Cargo.toml
entity/: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs
src/: main.rs
src/routes/: auth_routes.rs  home_routes.rs  mod.rs  post_routes.rs  user_routes.rs
src/routes/handlers/: auth_handlers.rs  home_handlers.rs  post_handlers.rs  user_handlers.rs
src/routes/middlewares/: auth_middlewares.rs
src/utils/: api_response.rs  constants.rs  jwt.rs  mod.rs
