[package]
name = "actix-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"   # Actix-web version 4.5.1
serde = "1.0.197"     # Serde version 1.0.197
serde_json = "=1.0.1" # Serde JSON version 1.0.1 specifically
env_logger = "0.11.3" # env_logger version 0.11.3
dotenv = "0.15.0"     # dotenv version 0.15.0
lazy_static = "1.4.0" # lazy_static version 1.4.0