[package]
name = "actix-web"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
actix-web = "4.5.1"
serde = "1.0.197"
serde_json = { version = "1.0.97", features = ["std"] }
env_logger = "0.11.3"
dotenv = "0.15.0"
lazy_static = "1.4.0"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
sha256 = "1.5.0"
chrono = "0.4.37"
jsonwebtoken = "9.3.0"
actix-web-lab = "0.20.2"